--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "antd": "^5.19.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-markdown": "^10.1.0",
         "react-router-dom": "^6.26.1",
         "sass": "^1.90.0"
     },
